--- a/index.html
+++ b/index.html
@@ -137,11 +137,10 @@ Requires a value of type `Date`
 <div id="matchpool" class="d-none container">
     <div class="offcanvas offcanvas-end" tabindex="-1" id="notificationContainer" aria-labelledby="notificationContainerLabel">
         <div class="offcanvas-header bg-primary">
-            <h5 id="notificationContainerLabel">Notifications</h5>
+            <h5 id="notificationContainerLabel">Incoming Requests</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body bg-dark" id="matchpool-notifications">
-            ...
         </div>
     </div>
 
@@ -159,7 +158,7 @@ Requires a value of type `Date`
         <button class="btn btn-link text-white" id="matchpool-chats" aria-label="chats">
             <i class="bi bi-chat" style="font-size: 2rem;"></i>
         </button>
-        <button class="btn btn-link text-white" id="matchpool-mail" aria-label="notifications" data-bs-toggle="offcanvas" data-bs-target="#notificationContainer" aria-controls="notificationContainer">
+        <button class="btn btn-link text-white" id="matchpool-notif-btn" aria-label="notifications" data-bs-toggle="offcanvas" data-bs-target="#notificationContainer" aria-controls="notificationContainer">
             <i class="bi bi-envelope" style="font-size: 2rem;"></i>
         </button>
     </nav>
