--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@ Requires a value of type `Date`
 
 <div id="matchpool" class="d-none container">
     <div class="offcanvas offcanvas-end" tabindex="-1" id="notificationContainer" aria-labelledby="notificationContainerLabel">
-        <div class="offcanvas-header bg-primary">
+        <div class="offcanvas-header bg-warning">
             <h5 id="notificationContainerLabel">Incoming Requests</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body bg-dark" id="matchpool-notifications">
-        </div>
+        <div class="offcanvas-body bg-dark" id="matchpool-notifications"></div>
     </div>
 
     <div class="alert alert-danger alert-dismissible fade show d-none" id="alert-repeat-match" role="alert">
