--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Requires a value of type `Date`
 
 <div id="matchpool" class="d-none container">
     <div class="offcanvas offcanvas-end" tabindex="-1" id="notificationContainer" aria-labelledby="notificationContainerLabel">
-        <div class="offcanvas-header bg-warning">
+        <div class="offcanvas-header bg-primary">
             <h5 id="notificationContainerLabel">Incoming Requests</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
