--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@ Requires a value of type `Date`
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>No ads</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>Built-in icebreakers</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>AI-generated opening lines</span></li>
+                                        <li class="py-2"><i class="fa-solid fa-check"></i> <span>AI-generated profile insights</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>More likely perfect matches</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>View mutual GitHub repos</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>Debug Mode - undo a match request</span></li>
@@ -297,6 +298,7 @@ Requires a value of type `Date`
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>No ads</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>Built-in icebreakers</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>AI-generated opening lines</span></li>
+                                        <li class="py-2"><i class="fa-solid fa-check"></i> <span>AI-generated profile insights</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>Choose any desired match</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>View mutual GitHub repos</span></li>
                                         <li class="py-2"><i class="fa-solid fa-check"></i> <span>Debug Mode - undo a match request</span></li>
