update colors for rankings

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Requires a value of type `Date`
                             <span class="m-1" id="profile-age"></span>
                             <span id="profile-aura"></span>
                         </div>
-                        <span class="badge rank-jobless w-100" id="profile-rank">Jobless</span>
+                        <span class="badge rank-jobless w-100" id="profile-rank"></span>
                         <div class="d-flex gap-2 flex-wrap profile-badges-container mt-1">
                             <span class="badge" id="profile-self"></span>
                             <span class="badge" id="profile-looking-for"></span>
