--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coder's Second Dream</title>
-    <link rel="icon" type="image/png" href="seconddreamlogo.jpg"/>
+    <link rel="icon" type="image/png" href="seconddreamlogo.png"/>
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -218,6 +218,39 @@ Requires a value of type `Date`
         </div>
     </div>
 
+    <!-- Edit custom button modal -->
+    <div class="modal fade" id="customButtonModal" tabindex="-1" aria-labelledby="customButtonModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark text-white">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="customButtonModalLabel">Add Social Link</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="socialLinkForm">
+                        <div class="mb-3">
+                            <label for="platformSelect" class="form-label">Platform</label>
+                            <select class="form-select" id="platformSelect" required>
+                                <option value="">Select a platform</option>
+                                <option value="twitter">Twitter</option>
+                                <option value="github">Github</option>
+                                <option value="reddit">Reddit</option>
+                                <option value="linkedin">LinkedIn</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="linkInput" class="form-label">Link</label>
+                            <input type="url" class="form-control" id="linkInput" placeholder="Enter link" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" form="socialLinkForm" class="btn btn-primary" id="customButtonSave">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Subscription Modal -->
     <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
