add show more matches button

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@ Requires a value of type `Date`
             <h5 id="notificationContainerLabel">Incoming Requests</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body bg-dark" id="matchpool-notifications"></div>
+        <div class="offcanvas-body bg-dark" id="matchpool-notifications">
+            <button class="btn btn-warning w-100" id="matchpool-notifications-show-more">Load More</button>
+        </div>
     </div>
 
     <div class="alert alert-danger alert-dismissible fade show d-none" id="alert-repeat-match" role="alert">
