--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@ Requires a value of type `Date`
             <h5 id="notificationContainerLabel">Incoming Requests</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body bg-dark" id="matchpool-notifications">
+        <div class="offcanvas-body bg-dark">
+            <div class="w-100" id="matchpool-notifications">
+
+            </div>
             <button class="btn btn-warning w-100" id="matchpool-notifications-show-more">Load More</button>
         </div>
     </div>
