update chatroom creation, show chats

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ Requires a value of type `Date`
         <div class="row p-4">
             <div class="col-12 col-sm-2">
             </div>
-            <div class="col-12 col-sm-7 bg-dark border-start border-end h-100" id="chat-container">
-                sad
+            <div class="col-12 col-sm-7 bg-dark border-start border-end h-100 p-0" id="chat-container">
+
             </div>
             <div class="col-12 col-sm-3">
             </div>
