add chat button

--- a/index.html
+++ b/index.html
@@ -405,6 +405,9 @@ Requires a value of type `Date`
                         <button class="btn btn-warning d-none" id="profile-match">
                             <i class="fa-solid fa-code-pull-request"></i> Pull
                         </button>
+                        <button class="btn btn-success d-none" id="profile-chat">
+                            <i class="fa-solid fa-message"></i> Chat
+                        </button>
                         <button class="btn btn-danger" id="profile-logout">
                             <i class="bi bi-box-arrow-right"></i> Logout
                         </button>
