--- a/index.html
+++ b/index.html
@@ -195,6 +195,16 @@ Requires a value of type `Date`
                 <div class="w-100" id="chat-container">
 
                 </div>
+                <div class="w-100" id="chat-contents">
+                    <h1 id="chat-title" class="text-white m-0"></h1>
+                    <div id="chat-messages" class="m-0">
+
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="chat-input" class="form-control" placeholder="Type a message..." aria-label="Type a message..." aria-describedby="button-addon2">
+                        <button class="btn btn-outline-secondary" type="button" id="chat-send">Send</button>
+                    </div>
+                </div>
                 <div class="container">
                     <div class="d-none w-100 row mt-3" id="chats-users-container">
 
