added heart for change mode

--- a/index.html
+++ b/index.html
@@ -196,7 +196,10 @@ Requires a value of type `Date`
 
                 </div>
                 <div class="w-100" id="chat-contents">
-                    <h1 id="chat-title" class="text-white m-0"></h1>
+                    <div class="hstack justify-content-between chat-header">
+                        <h1 id="chat-title" class="text-white m-0"></h1>
+                        <h1 id="chat-change-mode"><i class="fa-solid fa-heart"></i></h1>
+                    </div>
                     <div id="chat-messages" class="m-0">
 
                     </div>
