--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Requires a value of type `Date`
                     <div id="chat-messages" class="m-0">
 
                     </div>
-                    <div id="pickup-lines" class="d-none d-flex flex-wrap gap-2 p-3 overflow-scroll">
+                    <div id="pickup-lines" class="hstack d-flex flex-nowrap gap-2 p-3 overflow-x-scroll">
                         <!-- Pills will be inserted here -->
                     </div>
                     <div class="input-group">
