--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Requires a value of type `Date`
                         <h1 id="chat-title" class="text-white m-0"></h1>
                         <h1 id="chat-change-mode"><i class="fa-solid fa-heart"></i></h1>
                     </div>
-                    <div id="chat-messages" class="m-0">
+                    <div id="chat-messages" class="m-0 overflow-y-scroll overflow-x-scroll">
 
                     </div>
                     <div id="pickup-lines" class="hstack d-flex flex-nowrap gap-2 p-3 overflow-x-scroll">
