add chat page sizing things

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Requires a value of type `Date`
                 <button class="text-start chatoverflow-btn focused" id="chats-chats-btn"><i class="bi bi-chat-left-fill"></i> Chats</button>
                 <button class="text-start chatoverflow-btn" id="chats-users-btn"><i class="bi bi-person-circle"></i> Users</button>
             </div>
-            <div class="col-12 col-sm-10 bg-dark h-100 p-0">
+            <div class="col-12 col-sm-8 bg-dark h-100 p-0" id="chats-container-container">
                 <div class="w-100" id="chat-container">
 
                 </div>
@@ -216,6 +216,9 @@ Requires a value of type `Date`
 
                     </div>
                 </div>
+            </div>
+            <div class="col-12 col-sm-2 text-white vstack" id="chats-stats">
+
             </div>
         </div>
     </div>
