add chat blunder thing

--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@ Requires a value of type `Date`
                 <div class="w-100" id="chat-contents">
                     <div class="hstack justify-content-between chat-header">
                         <h1 id="chat-title" class="text-white m-0"></h1>
-                        <h1 id="chat-change-mode"><i class="fa-solid fa-heart"></i></h1>
+                        <div class="hstack gap-2">
+                            <h1 id="chat-change-mode"><i class="fa-solid fa-heart"></i></h1>
+                            <h1 id="chat-request-review"><i class="fas fa-chess-knight text-white"></i></h1>
+                        </div>
                     </div>
                     <div id="chat-messages" class="m-0 overflow-y-scroll overflow-x-scroll">
 
