--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@ Requires a value of type `Date`
         </h1>
     </nav>
     <div class="container">
-        <div class="row p-4">
-            <div class="col-12 col-sm-2 text-white vstack">
+        <div class="row">
+            <div class="col-sm-2 text-white vstack">
                 <button class="text-start chatoverflow-btn focused" id="chats-chats-btn"><i class="bi bi-chat-left-fill"></i> Chats</button>
                 <button class="text-start chatoverflow-btn" id="chats-users-btn"><i class="bi bi-person-circle"></i> Users</button>
             </div>
-            <div class="col-12 col-sm-8 bg-dark h-100 p-0" id="chats-container-container">
+            <div class="col-sm-6 bg-dark h-100 p-0" id="chats-container-container">
                 <div class="w-100" id="chat-container">
 
                 </div>
@@ -220,7 +220,7 @@ Requires a value of type `Date`
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-2 text-white vstack" id="chats-stats">
+            <div class="col-sm-3 m-2 text-white vstack" id="chats-stats">
 
             </div>
         </div>
