--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@ Requires a value of type `Date`
                 </div>
             </div>
             <div class="col-sm-3 m-2 text-white vstack" id="chats-stats">
-
+                <h1>Chat Stats</h1>
+                <h5>Total sent: <span id="stats-total-sent"></span></h5>
+                <h5>Total received: <span id="stats-total-received"></span></h5>
+                <h5>Longest chat with: <span id="stats-longest-chat"></span></h5>
+                <h5>Avg chat length: <span id="stats-avg-length"></span></h5>
+                <h5>First messages sent: <span id="stats-first-messages"></span></h5>
             </div>
         </div>
     </div>
